updated the axi4

--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -71,7 +71,7 @@
           </div>
           <a type="button" onClick="next('coverpoint')" class="btn btn-success btn-lg">Add Coverpoint</a>
           <a type="button" onClick="next('cross')" class="btn btn-success btn-lg">Add Cross Cover</a>
-          <button type="submit" class="btn btn-success btn-lg">Download</button>
+          <button type="submit" onClick="alert('the download doesn\'t work yet');" class="btn btn-success btn-lg">Download</button>
         </div>
 
         <div id="params" class="tab-pane fade">
