--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -69,9 +69,9 @@
               </table>
             </div>
           </div>
-          <a type="button" onClick="next('coverpoint')" class="btn btn-success btn-lg">Add Coverpoint</a>
-          <a type="button" onClick="next('cross')" class="btn btn-success btn-lg">Add Cross Cover</a>
           <button type="submit" onClick="alert('the download doesn\'t work yet');" class="btn btn-success btn-lg">Download</button>
+          <a type="button" onClick="next('coverpoint')" class="btn btn-primary btn-lg">Add Coverpoint</a>
+          <a type="button" onClick="next('cross')" class="btn btn-primary btn-lg">Add Cross Cover</a>
         </div>
 
         <div id="params" class="tab-pane fade">
@@ -105,7 +105,7 @@
               </table>
             </div>
           </div>
-          <a type="button" onClick="next('covergroup')" class="btn btn-success btn-lg">Save Settings</a>
+          <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Save Settings</a>
         </div>
 
         <div id="coverpoint" class="tab-pane fade">
@@ -114,7 +114,7 @@
             <img src="../../static/images/coverpoint-not-done.png" style="width:100%"></a>
           </p>
 
-          <a type="button" onClick="next('covergroup')" class="btn btn-success btn-lg">Back to Covergroup</a>
+          <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Back to Covergroup</a>
         </div>
 
         <div id="cross" class="tab-pane fade">
@@ -122,7 +122,7 @@
           <p>
             <img src="../../static/images/cross-not-done.png" style="width:40%"></a>
           </p>
-          <a type="button" onClick="next('covergroup')" class="btn btn-success btn-lg">Back to Covergroup</a>
+          <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Back to Covergroup</a>
         </div>
       </div>
     </form>
