first cut at a download

--- a/templates/funcov/index.html
+++ b/templates/funcov/index.html
@@ -5,6 +5,10 @@
 {% block content_block %}
 
   <p><img src="../../static/images/home.png" style="width:100%"></p>
-  <a class="btn btn-lg btn-success" href="{{ 'selector' }}" role="button">Get Started !</a>
+  <a class="btn btn-lg btn-success" href="{{ 'selector' }}" role="button">
+    <span style="font-size:30px">
+      <strong>Get Started <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span></strong>
+    </span>
+  </a>
 
 {% endblock %}
