--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -19,112 +19,118 @@
 
 {% block content_block %}
 
-    <script>
-      function next(tab) {
-        var nav = "#nav-" + tab;
-        var tab = "#" + tab;
-        $('.nav li').removeClass('active');
-        $(nav).addClass('active');
-        $('.tab-pane').removeClass('active');
-        $(tab).addClass('active in');
-      }
-    </script>
+   <script>
+     function next(tab) {
+       var nav = "#nav-" + tab;
+       var tab = "#" + tab;
+       $('.nav li').removeClass('active');
+       $(nav).addClass('active');
+       $('.tab-pane').removeClass('active');
+       $(tab).addClass('active in');
+     }
 
-    <form id="category_form" method="post" action="{% url 'editor' %}">
-      {{ parameters.management_form }}
-      {{ covergroups.management_form }}
+     function target_popup(form) {
+         window.open('', 'formpopup', 'width=650,height=600,resizeable,scrollbars,menubar=no,location=no,titlebar=no,toolbar=no');
+         form.target = 'formpopup';
+     }
+   </script>
+
+   <form id="editor_form" method="post" action="{% url 'editor' %}" onsubmit="document.getElementById('kind').value='result'; target_popup(this)">
+     {{ parameters.management_form }}
+     {{ covergroups.management_form }}
   
-      {% csrf_token %}
+     {% csrf_token %}
 
-      <input name="type" value="{{ type }}" type="hidden"/>
+     <input name="type" value="{{ type }}" type="hidden"/>
+     <input name="kind" id="kind" value="" type="hidden"/>
 
-      <div class="tab-content">
-        <div id="covergroup" class="tab-pane fade in active">
-          <h3>What {{ name }} coverpoints are you interested in?</h3>
+     <div class="tab-content">
+       <div id="covergroup" class="tab-pane fade in active">
+         <h3>What {{ name }} coverpoints are you interested in?</h3>
 
-          <div class="row">
-            <div class="col-lg-12">
-              <table class="table table-striped text-left">
-                <thead>
-                  <tr>
-                    <th>Enabled</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Sensitivity</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for c in covergroups %}
-                    {{ c.name }}
-                    {{ c.desc }}
-                    {{ c.sensitivity }}
-                    <tr>
-                      <td>{{ c.enable }}</td>
-                      <td>{{ c.name.value }}</td>
-                      <td>{{ c.desc.value }}</td>
-                      <td>{{ c.sensitivity.value }}</td>
-                    </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
-            </div>
-          </div>
-          <button type="submit" onClick="alert('the download doesn\'t work yet');" class="btn btn-success btn-lg">Download</button>
-          <a type="button" onClick="next('coverpoint')" class="btn btn-primary btn-lg">Add Coverpoint</a>
-          <a type="button" onClick="next('cross')" class="btn btn-primary btn-lg">Add Cross Cover</a>
-        </div>
+         <div class="row">
+           <div class="col-lg-12">
+             <table class="table table-striped text-left">
+               <thead>
+                 <tr>
+                   <th>Enabled</th>
+                   <th>Name</th>
+                   <th>Description</th>
+                   <th>Sensitivity</th>
+                 </tr>
+               </thead>
+               <tbody>
+                 {% for c in covergroups %}
+                   {{ c.name }}
+                   {{ c.desc }}
+                   {{ c.sensitivity }}
+                   <tr>
+                     <td>{{ c.enable }}</td>
+                     <td>{{ c.name.value }}</td>
+                     <td>{{ c.desc.value }}</td>
+                     <td>{{ c.sensitivity.value }}</td>
+                   </tr>
+                 {% endfor %}
+               </tbody>
+             </table>
+           </div>
+         </div>
+         <button type="submit" class="btn btn-success btn-lg">Download</button>
+         <a type="button" onClick="next('coverpoint')" class="btn btn-primary btn-lg">Add Coverpoint</a>
+         <a type="button" onClick="next('cross')" class="btn btn-primary btn-lg">Add Cross Cover</a>
+       </div>
 
-        <div id="params" class="tab-pane fade">
-          <h3>How are your {{ name }} ports configured?</h3>
+       <div id="params" class="tab-pane fade">
+         <h3>How are your {{ name }} ports configured?</h3>
 
-          <div class="row">
-            <div class="col-lg-6 col-lg-offset-3">
-              <table class="table table-striped text-left">
-                <thead>
-                  <tr>
-                    <th>Port Name</th>
-                    <th>Bus Width</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for p in parameters %}
-                    {{ p.name }}
-                    {{ p.enable }}
-                    <tr>
-                      <td>{{ p.name.value }}</td>
-                      <td>
-                        {% if p.select.value != None %}
-                        {{ p.select }}
-                        {% else %}
-                        -
-                        {% endif %}
-                      </td>
-                    </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
-            </div>
-          </div>
-          <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Save Settings</a>
-        </div>
+         <div class="row">
+           <div class="col-lg-6 col-lg-offset-3">
+             <table class="table table-striped text-left">
+               <thead>
+                 <tr>
+                   <th>Port Name</th>
+                   <th>Bus Width</th>
+                 </tr>
+               </thead>
+               <tbody>
+                 {% for p in parameters %}
+                   {{ p.name }}
+                   {{ p.enable }}
+                   <tr>
+                     <td>{{ p.name.value }}</td>
+                     <td>
+                       {% if p.select.value != None %}
+                       {{ p.select }}
+                       {% else %}
+                       -
+                       {% endif %}
+                     </td>
+                   </tr>
+                 {% endfor %}
+               </tbody>
+             </table>
+           </div>
+         </div>
+         <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Save Settings</a>
+       </div>
 
-        <div id="coverpoint" class="tab-pane fade">
-          <h3>Coming Soon... Defining Custom Coverpoints</h3>
-          <p>
-            <img src="../../static/images/coverpoint-not-done.png" style="width:100%"></a>
-          </p>
+       <div id="coverpoint" class="tab-pane fade">
+         <h3>Coming Soon... Defining Custom Coverpoints</h3>
+         <p>
+           <img src="../../static/images/coverpoint-not-done.png" style="width:100%"></a>
+         </p>
 
-          <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Back to Covergroup</a>
-        </div>
+         <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Back to Covergroup</a>
+       </div>
 
-        <div id="cross" class="tab-pane fade">
-          <h3>Coming Soon... Defining Custom Crosses</h3>
-          <p>
-            <img src="../../static/images/cross-not-done.png" style="width:40%"></a>
-          </p>
-          <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Back to Covergroup</a>
-        </div>
-      </div>
-    </form>
+       <div id="cross" class="tab-pane fade">
+         <h3>Coming Soon... Defining Custom Crosses</h3>
+         <p>
+           <img src="../../static/images/cross-not-done.png" style="width:40%"></a>
+         </p>
+         <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Back to Covergroup</a>
+       </div>
+     </div>
+   </form>
 
 {% endblock %}
