text type and size

--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -30,7 +30,7 @@
      }
 
      function target_popup(form) {
-         window.open('', 'formpopup', 'width=650,height=600,resizeable,scrollbars,menubar=no,location=no,titlebar=no,toolbar=no');
+         window.open('', 'formpopup', 'width=700,height=620,scrollbars,menubar=no,location=no,titlebar=no,toolbar=no');
          form.target = 'formpopup';
      }
    </script>
