--- a/templates/funcov/myCovergroup.html
+++ b/templates/funcov/myCovergroup.html
@@ -53,7 +53,7 @@
         <a href="{% url 'index' %}"><img src="../../static/images/funcov.png" style="width:15%"></a>
       </div>
 
-      <textarea cols="70" rows="50">
+      <textarea style="font-family: Courier;" cols="70" rows="20">
       {{ txt }}
       </textarea>
 
