--- a/templates/funcov/myCovergroup.html
+++ b/templates/funcov/myCovergroup.html
@@ -58,7 +58,7 @@
       </textarea>
 
       <p><a type="button" onClick="window.close()" class="btn btn-primary btn-lg">Close</a>
-         <a type="button" href="data:application/octet-stream,{{ uri }}" class="btn btn-primary btn-lg">Download</a></p>
+         <a type="button" href="data:application/octet-stream,{{ uri }}" class="btn btn-primary btn-lg" download="myCovergroup.sv">Download</a></p>
 
       <footer class="footer">
         <p>&copy; AgileSoC.com 2015</p>
