--- a/templates/funcov/base.html
+++ b/templates/funcov/base.html
@@ -59,8 +59,8 @@
             </ul>
             {% else %}
             <ul class="nav nav-pills pull-right" style="margin-top:55px">
-              <li role="presentation"><a href="{% url 'auth_login' %}">Login</a></li>
-              <li role="presentation"><a href="{% url 'registration_register' %}">Register</a></li>
+              <!--<li role="presentation"><a href="{% url 'auth_login' %}">Login</a></li>-->
+              <li role="presentation"><a href="{% url 'registration_register' %}"><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> New Features <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></a></li>
             </ul>
             {% endif %}
           </nav>
@@ -73,8 +73,8 @@
             </ul>
             {% else %}
             <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="{% url 'auth_login' %}">Login</a></li>
-              <li role="presentation"><a href="{% url 'registration_register' %}">Register</a></li>
+              <!--<li role="presentation"><a href="{% url 'auth_login' %}">Login</a></li>-->
+              <li role="presentation"><a href="{% url 'registration_register' %}"><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> New Features <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></a></li>
             </ul>
             {% endif %}
           </nav>
