--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -3,32 +3,38 @@
 {% load widget_tweaks %}
 
 {% block content_block %}
-  <div style="margin: 0 auto; width:50%;">
-    <form class="form-signin" method="post" action="/accounts/register/">
-      <h2 class="form-signin-heading">Register Here</h2>
-        <p>
-          {% csrf_token %}
-          <label for="id_username" class="sr-only">User Name</label>
-          {% render_field form.username class+="form-control" placeholder+="Username" type+="text" %}
-          {{ form.username.errors }}
+  <div class="row">
+    <div class="col-lg-6 col-md-6">
+      <h2>Stay Tuned!</h2>
+      <p>We're adding new features all the time. Create an account for email announcements and the latest information on building functional coverage models with FunCov.</p>
+    </div>
+    <div class="col-lg-6 col-md-6">
+      <br/>
+      <form class="form-signin" method="post" action="/accounts/register/">
+          <p>
+            {% csrf_token %}
+            <label for="id_username" class="sr-only">User Name</label>
+            {% render_field form.username class+="form-control" placeholder+="Username" type+="text" %}
+            {{ form.username.errors }}
 
-          <label for="id_email" class="sr-only">Email</label>
-          {% render_field form.email class+="form-control" placeholder+="Email Address" type+="email"%}
-          {{ form.email.errors }}
+            <label for="id_email" class="sr-only">Email</label>
+            {% render_field form.email class+="form-control" placeholder+="Email Address" type+="email"%}
+            {{ form.email.errors }}
 
-          <label for="id_password1" class="sr-only">Password</label>
-          {% render_field form.password1 class+="form-control" placeholder+="Password" type+="password" %}
-          {{ form.password1.errors }}
+            <label for="id_password1" class="sr-only">Password</label>
+            {% render_field form.password1 class+="form-control" placeholder+="Password" type+="password" %}
+            {{ form.password1.errors }}
 
-          <label for="id_password2" class="sr-only">Password</label>
-          {% render_field form.password2 class+="form-control" placeholder+="Confirm Password" type+="password" %}
-          {{ form.password2.errors }}
-        </p>
+            <label for="id_password2" class="sr-only">Password</label>
+            {% render_field form.password2 class+="form-control" placeholder+="Confirm Password" type+="password" %}
+            {{ form.password2.errors }}
+          </p>
 
-        <p>
-          <button class="btn btn-lg btn-success btn-block" type="submit">Register</button>
-          <input type="hidden" name="next" value="{{ next }}" />
-        </p>
-    </form>
+          <p>
+            <button class="btn btn-lg btn-success btn-block" type="submit">Register</button>
+            <input type="hidden" name="next" value="{{ next }}" />
+          </p>
+      </form>
+    </div>
   </div>
 {% endblock %}
