--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-lg-6 col-md-6">
       <h2>Stay Tuned!</h2>
-      <p>We're adding new features all the time. Create an account for email announcements and the latest information on building functional coverage models with FunCov.</p>
+      <p>We're adding new features and protocols all the time. Create an account for email announcements and the latest information on building functional coverage models with FunCov.</p>
     </div>
     <div class="col-lg-6 col-md-6">
       <br/>
