--- a/templates/funcov/base.html
+++ b/templates/funcov/base.html
@@ -56,7 +56,7 @@
               <li role="presentation"><a href="{% url 'auth_logout' %}">Logout</a></li>
             {% else %}
               <!--<li role="presentation"><a href="{% url 'auth_login' %}">Login</a></li>-->
-              <li role="presentation"><a href="{% url 'registration_register' %}"><h3><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> New Features</a></h3></li>
+              <li style="font-size:x-large" role="presentation"><a href="{% url 'registration_register' %}"><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> New Features</a></li>
             {% endif %}
             </ul>
           </nav>
