--- a/templates/funcov/base.html
+++ b/templates/funcov/base.html
@@ -51,12 +51,15 @@
     <div class="container">
       <div class="header clearfix">
           <nav>
-            <ul class="nav nav-pills pull-right">
+            <!--<ul class="nav nav-pills pull-right" style="margin-top:12px">-->
+            <ul class="nav nav-pills pull-right" style="margin-top:5px">
             {% if user.is_authenticated %}
               <li role="presentation"><a href="{% url 'auth_logout' %}">Logout</a></li>
             {% else %}
-              <!--<li role="presentation"><a href="{% url 'auth_login' %}">Login</a></li>-->
-              <li style="font-size:x-large" role="presentation"><a href="{% url 'registration_register' %}"><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> New Features</a></li>
+              <!--<li style="font-size:large" role="presentation"><a href="{% url 'auth_login' %}">About</a></li>
+              <li style="font-size:large" role="presentation"><a href="{% url 'auth_login' %}">Login</a></li>
+              <li style="font-size:large" role="presentation"><a href="{% url 'registration_register' %}">New Features</span> </a></li>-->
+              <li style="font-size:x-large" role="presentation"><a href="{% url 'registration_register' %}">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a></li>
             {% endif %}
             </ul>
           </nav>
