--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -131,7 +131,7 @@
            <img src="../../static/images/coverpoint-not-done.png" style="width:100%"></a>
          </p>
 
-         <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Back to Covergroup</a>
+         <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
        </div>
 
        <div id="cross" class="tab-pane fade">
@@ -139,7 +139,7 @@
          <p>
            <img src="../../static/images/cross-not-done.png" style="width:40%"></a>
          </p>
-         <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Back to Covergroup</a>
+         <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
        </div>
 
        <div id="transition" class="tab-pane fade">
@@ -147,7 +147,7 @@
          <p>
            <img src="../../static/images/transitions-not-done.png" style="width:40%"></a>
          </p>
-         <a type="button" onClick="next('covergroup')" class="btn btn-primary btn-lg">Back to Covergroup</a>
+         <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
        </div>
      </div>
    </form>
