--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -4,6 +4,11 @@
 
 {% block content_block %}
   <div class="row">
+    <h2>New Feature Road Map</h2>
+    <img src="../../static/images/road-map.png" style="width:90%">
+  </div>
+  <hr/>
+  <div class="row">
     <div class="col-lg-6 col-md-6">
       <h2>Stay Tuned!</h2>
       <p>We're adding new features and protocols all the time. Create an account for email announcements and the latest information on building functional coverage models with FunCov.</p>
