--- a/templates/funcov/index.html
+++ b/templates/funcov/index.html
@@ -47,13 +47,13 @@
 
   <div class="row">
     <h2>Who is FunCov?</h2>
-    <div class="col-lg-5 col-md-5">
-      <p><img src="../../static/images/the-team.png" style="width:100%"></p>
-    </div>
     <div class="col-lg-7 col-md-7">
       <p>
-        FunCov is a collaborative effort between engineers from <a href="http://www.agilesoc.com">AgileSoC.com</a> and <a href="http://www.realityreused.com">RealityReused.com</a>. We believe there's been <em>fun</em> in functional coverage since before the idea even existed, but no one has noticed, until now.
+        FunCov is a collaborative effort between engineers from <a href="http://www.agilesoc.com">AgileSoC.com</a> and <a href="http://www.realityreused.com">RealityReused.com</a> who believe there's been <em>fun</em> in functional coverage since before the idea even existed.
       </p>
+    </div>
+    <div class="col-lg-5 col-md-5">
+      <p><img src="../../static/images/the-team.png" style="width:100%"></p>
     </div>
   </div>
   <a type="button" href="{{ 'about' }}" class="btn btn-primary btn-lg">About <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
