apb/ahb checkpoint

--- a/templates/funcov/index.html
+++ b/templates/funcov/index.html
@@ -5,7 +5,6 @@
 {% block content_block %}
 
   <div class="row">
-    <h2>Customized Functional Coverage</h2>
     <p><img src="../../static/images/home.png" style="width:100%"></p>
     <a class="btn btn-lg btn-success" href="{{ 'selector' }}" role="button">
       <span style="font-size:30px">
@@ -37,11 +36,11 @@
     </div>
     <div class="col-lg-7 col-md-7">
       <p>
-        Pretty much! FunCov includes default coverage models for an array of protocols - including AHB, APB and AXI4-Stream. Over time, and through contributions from our users, the library will grow to include others.
+        It appears so! FunCov includes default Verilog coverage models for an array of protocols - including AHB, APB and AXI4-Stream. Over time, and through contributions from our users, the library will grow to include others.
       </p>
     </div>
   </div>
-  <a type="button" href="{{ 'editor' }}/?type=axi4stream" class="btn btn-success btn-lg">Show Me <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
+  <a type="button" href="{{ 'selector' }}" class="btn btn-success btn-lg">Show Me <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
   <br/>
   <hr/>
 
