--- a/templates/funcov/contact.html
+++ b/templates/funcov/contact.html
@@ -6,6 +6,6 @@
 
     <h2 class='text-left'>Contact Us</h2>
 
-    <p class='text-left'>For any information or feedback related to FunCov, contact Neil Johnson by email at: <a href="mailto:neil.johnson@agilesoc.com" target="_newtab">neil.johnson@agilesoc.com</a></p>
+    <p class='text-left'>For any information or feedback related to FunCov, contact Neil Johnson by email at <a href="mailto:neil.johnson@agilesoc.com" target="_newtab">neil.johnson@agilesoc.com</a> or via <a href="http://www.linkedin.com/profile/view?id=5203931" target="_newtab">LinkedIn</a>.</p>
 
 {% endblock %}
