--- a/templates/funcov/index.html
+++ b/templates/funcov/index.html
@@ -15,10 +15,10 @@
   <br/>
   <hr/>
   <div class="row">
-    <h2>Functional Coverage Crowdsourcing</h2>
+    <h2>Crowdsourcing Functional Coverage</h2>
     <div class="col-lg-7 col-md-7">
       <p>
-        Functional coverage crowdsourcing is engineers from across our industry collectively refusing to reinvent the wheel, over... and over... again. But FunCov is more than just crowdsourcing.
+        Crowdsourcing functional coverage is engineers from across our industry collectively refusing to reinvent the wheel, over... and over... again. But FunCov is more than just crowdsourcing.
       </p>
     </div>
     <div class="col-lg-5 col-md-5">
