--- a/templates/funcov/about.html
+++ b/templates/funcov/about.html
@@ -18,7 +18,7 @@
         <img src="../../static/images/neil.png" style="width:100%">
       </div>
       <div class="col-lg-9 col-md-9">
-        <p class='text-left'><b>Neil Johnson</b> is a verification consultant, co-moderator of <a href="http://www.agilesoc.com">AgileSoC.com</a> and co-developer of <a href="http://www.agilesoc.com/svunit">SVUnit</a>. Neil hopes to improve functional coverage tools, usage models and accessibility by providing opportunities for engineers to collaboratively solve common industry problems.</p>
+        <p class='text-left'><b>Neil Johnson</b> is a verification consultant, co-moderator of <a href="http://www.agilesoc.com">AgileSoC.com</a> and <a href="http://www.agilesoc.com/svunit">SVUnit</a> developer. Neil hopes to improve functional coverage tools, usage models and accessibility by providing opportunities for engineers to collaboratively solve common industry problems.</p>
       </div>
     </div>
 
