--- a/templates/funcov/about.html
+++ b/templates/funcov/about.html
@@ -6,9 +6,11 @@
 
     <h2 class='text-left'>About FunCov</h2>
 
-    <p class='text-left'>As much as hardware developers talk about our dependency on functional coverage, we believe usage lags far behind the rhetoric. Systemverilog language constructs are awkward and sporadically used by developers. That makes building functional coverage models cumbersome and error prone. Accessibility is also an issue where design engineers are completely shutout of the process.</p>
+    <p class='text-left'>As much as hardware developers stress a dependency on functional coverage, usage models lag far behind the rhetoric.</p>
 
-    <p class='text-left'>FunCov is designed to address these shortcomings. It's a tool anyone can use, the IP you get out is exactly what you need and the code works.</p>
+    <!--<p class='text-left'>Systemverilog language constructs are awkward and sporadically used by developers making coverage collection cumbersome and error prone. Specialization and accessibility ensures design engineers are completely shutout of the process. Coverage models are built over and over again for the same industry protocols. We have no means of sharing and consolidating experience.</p>-->
+
+    <p class='text-left'>FunCov is designed to address the shortcomings of collecting functional coverage. It aggregates industry knowledge of commonly used protocols in a way that is highly accessible to design and verification engineers alike. The IP you get out is exactly what you need; no less, no more.</p>
 
     <hr/>
 
