--- a/templates/funcov/index.html
+++ b/templates/funcov/index.html
@@ -12,7 +12,6 @@
       </span>
     </a>
   </div>
-  <br/>
   <hr/>
   <div class="row">
     <h2>Crowdsourcing Functional Coverage</h2>
@@ -26,11 +25,10 @@
     </div>
   </div>
   <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">Product Road Map <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
-  <br/>
   <hr/>
 
   <div class="row">
-    <h2>Functional coverage models for free?</h2>
+    <h2>Functional Coverage Models For Free?</h2>
     <div class="col-lg-5 col-md-5">
       <p><img src="../../static/images/easy-peasy.png" style="width:100%"></p>
     </div>
@@ -41,14 +39,13 @@
     </div>
   </div>
   <a type="button" href="{{ 'selector' }}" class="btn btn-success btn-lg">Show Me <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
-  <br/>
   <hr/>
 
   <div class="row">
-    <h2>Who is FunCov?</h2>
+    <h2>Who's Building FunCov?</h2>
     <div class="col-lg-7 col-md-7">
       <p>
-        FunCov is a collaborative effort between engineers from <a href="http://www.agilesoc.com">AgileSoC.com</a> and <a href="http://www.realityreused.com">RealityReused.com</a> who believe there's been <em>fun</em> in functional coverage since before the idea even existed.
+        FunCov is a collaborative effort between engineers from <a href="http://www.agilesoc.com">AgileSoC.com</a> and <a href="http://www.realityreused.com">RealityReused.com</a>. We believe there's been <em>fun</em> in functional coverage since before the idea even existed.
       </p>
     </div>
     <div class="col-lg-5 col-md-5">
