--- a/templates/funcov/base.html
+++ b/templates/funcov/base.html
@@ -47,9 +47,8 @@
   </head>
 
   <body>
-
     <div class="container">
-      <div class="header clearfix">
+      <div class="header clearfix" style="padding-bottom:5px; margin-bottom:5px;">
           <nav>
             <ul class="nav nav-pills pull-right" style="margin-top:12px">
             {% if user.is_authenticated %}
