--- a/templates/funcov/about.html
+++ b/templates/funcov/about.html
@@ -17,7 +17,7 @@
     <h2 class='text-left'>FunCov Development Team</h2>
     <div class="row">
       <div class="col-lg-3 col-md-3">
-        <img src="../../static/images/neil.png" style="width:100%">
+        <img src="{% static "images/neil.png" %}" style="width:100%">
       </div>
       <div class="col-lg-9 col-md-9">
         <p class='text-left'><b>Neil Johnson</b> is a verification consultant, co-moderator of <a href="http://www.agilesoc.com">AgileSoC.com</a> and <a href="http://www.agilesoc.com/svunit">SVUnit</a> developer. Neil hopes to improve functional coverage tools, usage models and accessibility by providing opportunities for engineers to collaboratively solve common industry problems.</p>
@@ -26,7 +26,7 @@
 
     <div class="row">
       <div class="col-lg-3 col-md-3">
-        <img src="../../static/images/rr-guys.png" style="width:100%">
+        <img src="{% static "images/rr-guys.png" %}" style="width:100%">
       </div>
       <div class="col-lg-9 col-md-9">
         <p class='text-left'><b>Dyck Garrison</b>, <b>Vladimir Joliot</b> and <b>Glenn Wong</b> are co-conspirators at <a href="http://www.realityreused.com">RealityReused.com</a>, a fictional EDA startup bent on overthrowing incumbant Big3 Inc. While FunCov is an entirely serious product, being too serious can take the fun out of the job. So for the inevitable holes, hiccups and flops during development, Dyck, Vlad and Glenn will do their best to provide a little comic relief.</p>
