--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -87,7 +87,7 @@
          </p>
 -->
          <p>
-         <button type="submit" class="btn btn-success btn-lg">Download</button>
+         <button type="submit" class="btn btn-success btn-lg">Download Covergroup</button>
          </p>
        </div>
 
@@ -128,7 +128,7 @@
        <div id="coverpoint" class="tab-pane fade">
          <h3>Coming Soon... Defining Custom Coverpoints</h3>
          <p>
-           <img src="../../static/images/coverpoint-not-done.png" style="width:100%"></a>
+           <img src="{% static "images/coverpoint-not-done.png" %}" style="width:100%"></a>
          </p>
 
          <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
@@ -137,7 +137,7 @@
        <div id="cross" class="tab-pane fade">
          <h3>Coming Soon... Defining Custom Crosses</h3>
          <p>
-           <img src="../../static/images/cross-not-done.png" style="width:40%"></a>
+           <img src="{% static "images/cross-not-done.png" %}" style="width:40%"></a>
          </p>
          <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
        </div>
@@ -145,7 +145,7 @@
        <div id="transition" class="tab-pane fade">
          <h3>Coming Soon... Defining Custom Transitions</h3>
          <p>
-           <img src="../../static/images/transitions-not-done.png" style="width:40%"></a>
+           <img src="{% static "images/transitions-not-done.png" %}" style="width:40%"></a>
          </p>
          <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
        </div>
