--- a/templates/funcov/index.html
+++ b/templates/funcov/index.html
@@ -5,7 +5,7 @@
 {% block content_block %}
 
   <div class="row">
-    <p><img src="../../static/images/home.png" style="width:100%"></p>
+    <p><img src="{% static "images/home.png" %}" style="width:100%"></p>
     <a class="btn btn-lg btn-success" href="{{ 'selector' }}" role="button">
       <span style="font-size:30px">
         <strong>Get Started <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span></strong>
@@ -21,7 +21,7 @@
       </p>
     </div>
     <div class="col-lg-5 col-md-5">
-      <p><img src="../../static/images/crowd-sourcing.png" style="width:100%"></p>
+      <p><img src="{% static "images/crowd-sourcing.png" %}" style="width:100%"></p>
     </div>
   </div>
   <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">Product Road Map <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
@@ -30,11 +30,11 @@
   <div class="row">
     <h2>Functional Coverage Models For Free?</h2>
     <div class="col-lg-5 col-md-5">
-      <p><img src="../../static/images/easy-peasy.png" style="width:100%"></p>
+      <p><img src="{% static "images/easy-peasy.png" %}" style="width:100%"></p>
     </div>
     <div class="col-lg-7 col-md-7">
       <p>
-        It appears so! FunCov includes default Verilog coverage models for an array of protocols - including AHB, APB and AXI4-Stream. Over time, and through contributions from our users, the library will grow to include others.
+        It appears so! FunCov includes Verilog coverage models for an array of protocols - including AHB, APB and AXI4-Stream. Over time, with help from our users, the library will grow to include others.
       </p>
     </div>
   </div>
@@ -49,7 +49,7 @@
       </p>
     </div>
     <div class="col-lg-5 col-md-5">
-      <p><img src="../../static/images/the-team.png" style="width:100%"></p>
+      <p><img src="{% static "images/the-team.png" %}" style="width:100%"></p>
     </div>
   </div>
   <a type="button" href="{{ 'about' }}" class="btn btn-primary btn-lg">About <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
