--- a/templates/funcov/myCovergroup.html
+++ b/templates/funcov/myCovergroup.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 
+{% load staticfiles %}
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,24 +9,24 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../static/images/favicon.ico">
+    <link rel="icon" href="{% static "images/favicon.ico" %}">
 
     <title>FunCov - Functional Coverage Made Easy</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../static/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static "dist/css/bootstrap.min.css" %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../../static/dist/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="{% static "dist/css/jumbotron-narrow.css" %}" rel="stylesheet">
 
-    <link href="../../static/dist/css/custom.css" rel="stylesheet">
+    <link href="{% static "dist/css/custom.css" %}" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../static/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../static/assets/js/ie-emulation-modes-warning.js"></script>
+    <!--[if lt IE 9]><script src="{% static "assets/js/ie8-responsive-file-warning.js" %}"></script><![endif]-->
+    <script src="{% static "assets/js/ie-emulation-modes-warning.js" %}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -50,7 +52,7 @@
 
     <div class="container">
       <div class="header clearfix">
-        <a href="{% url 'index' %}"><img src="../../static/images/funcov.png" style="width:15%"></a>
+        <a href="{% url 'index' %}"><img src="{% static "images/funcov.png" %}" style="width:15%"></a>
       </div>
 
       <textarea style="font-family: Courier;" cols="70" rows="20">
@@ -68,6 +70,6 @@
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../static/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="{% static "assets/js/ie10-viewport-bug-workaround.js" %}"></script>
   </body>
 </html>
