--- a/templates/funcov/editor.html
+++ b/templates/funcov/editor.html
@@ -131,6 +131,7 @@
            <img src="{% static "images/coverpoint-not-done.png" %}" style="width:100%"></a>
          </p>
 
+         <a type="button" onClick="next('covergroup')" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span> My Covergroup</a>
          <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
        </div>
 
@@ -139,6 +140,7 @@
          <p>
            <img src="{% static "images/cross-not-done.png" %}" style="width:40%"></a>
          </p>
+         <a type="button" onClick="next('covergroup')" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span> My Covergroup</a>
          <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
        </div>
 
@@ -147,6 +149,7 @@
          <p>
            <img src="{% static "images/transitions-not-done.png" %}" style="width:40%"></a>
          </p>
+         <a type="button" onClick="next('covergroup')" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-hand-left" aria-hidden="true"></span> My Covergroup</a>
          <a type="button" href="{% url 'registration_register' %}" class="btn btn-primary btn-lg">New Features <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> </a>
        </div>
      </div>
