get started link

--- a/templates/funcov/base.html
+++ b/templates/funcov/base.html
@@ -57,6 +57,7 @@
               <!--<li role="presentation"><a href="{% url 'auth_login' %}">Login</a></li>-->
               <li role="presentation"><a href="{% url 'registration_register' %}">New Features</span> </a></li>
             {% endif %}
+              <li role="presentation"><a href="{% url 'selector' %}">Get Started</a></li>
               <li role="presentation"><a href="{% url 'about' %}">About</a></li>
               <li role="presentation"><a href="{% url 'contact' %}">Contact Us</a></li>
             </ul>
